todo list part 1

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,20 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+#root {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: cornflowerblue;
+}
+
+#root li {
+  border: 3px solid coral;
+  color: greenyellow;
+}
+
+#root h1 {
+  color: greenyellow;
+}
